tests/reject/referenceImmutable.emojic
🕊 🥓 🍇
  🖍🆕 value 🔢 ⬅️ 0

  🆕🍇
  🍉

  🖍❗️⏫ 🍇
    value ⬅️➕ 1
  🍉
🍉

🕊 🐭 🍇
  🖍🆕 bacon 🥓 ⬅️ 🆕🥓❗️

  🆕🍇🍉

  ❗️ 🍳 ➡️ ✴️🥓 🍇
    ↩️ bacon
  🍉
🍉

🏁 🍇
  🆕🐭❗️➡️mouse
  ⏫🍳mouse❗️❗️
🍉
